// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitCursorMdc > writes deterministic content under the chemistry vocab 1`] = `
"---
description: Architecture rules for fixtureapp (chemag)
globs:
  - "src/**/*"
alwaysApply: true
---
<!-- chemag:rules:start -->
# fixtureapp architecture

Cross-compound imports go through the public surface (\`public.ts\`) only — never reach into internal files.

## Dependency rules
| Role | Can depend on |
|------|---------------|
| element | element |
| molecule | element, molecule |
| reaction | element, molecule, interface |
| interface | element, molecule |
| adapter | element, molecule, interface, adapter |
| buffer | element, molecule, interface |

## Validation
Run \`chemag check-edit <file>\` after every edit.
<!-- chemag:rules:end -->
"
`;

exports[`emitCursorMdc > writes to .cursor/rules/architecture.mdc with frontmatter (standard) 1`] = `
"---
description: Architecture rules for fixtureapp (chemag)
globs:
  - "src/**/*"
alwaysApply: true
---
<!-- chemag:rules:start -->
# fixtureapp architecture

Cross-module imports go through the public surface (\`public.ts\`) only — never reach into internal files.

## Dependency rules
| Role | Can depend on |
|------|---------------|
| element | element |
| molecule | element, molecule |
| reaction | element, molecule, interface |
| interface | element, molecule |
| adapter | element, molecule, interface, adapter |
| buffer | element, molecule, interface |

## Validation
Run \`chemag check-edit <file>\` after every edit.
<!-- chemag:rules:end -->
"
`;
